syntax = "proto3";

package sebuf.http;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/SebastienMelki/sebuf/http;http";

// HttpConfig defines HTTP-specific configuration for an RPC method
message HttpConfig {
  // The HTTP path for this method
  string path = 1;
}

// Extension for method options
extend google.protobuf.MethodOptions {
  HttpConfig config = 50003;
}

// ServiceConfig defines HTTP-specific configuration for an entire service
message ServiceConfig {
  // Base path prefix for all methods in this service
  string base_path = 1;
}

// Extension for service options
extend google.protobuf.ServiceOptions {
  ServiceConfig service_config = 50004;
}

// FieldExamples defines example values for a field
message FieldExamples {
  // List of example values for this field
  repeated string values = 1;
}

// Extension for field-level examples
extend google.protobuf.FieldOptions {
  FieldExamples field_examples = 50007;
}